# PEA_Zad1

./: .gitignore  CMakeLists.txt
algorithms/: BranchBound.cpp  BranchBound.h  BranchBoundNode.h  bruteForce.cpp  bruteForce.h
data/: dataGenerator.cpp  dataGenerator.h  fileOperator.cpp  fileOperator.h  timer.cpp  timer.h
menu/: main.cpp
tests/: tester.cpp  tester.h
